src/cmavsdk/plugins/log_streaming/log_streaming.h

// WARNING: THIS FILE IS AUTOGENERATED! As such, it should not be edited.
// Edits need to be made to the proto files
// (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/log_streaming/log_streaming.proto)

#ifndef CMAVSDK_LOG_STREAMING_H
#define CMAVSDK_LOG_STREAMING_H

#include <stddef.h>
#include <stdint.h>
#include <stdbool.h>
#include "cmavsdk/mavsdk_export.h"

#ifdef __cplusplus
extern "C" {
#endif

/**
 * @brief Provide log streaming data.
 */

// ===== Forward Declarations =====
typedef void* mavsdk_system_t;

// ===== Opaque Handles =====
typedef void* mavsdk_log_streaming_t;
typedef void* mavsdk_log_streaming_log_streaming_raw_handle_t;

// ===== Enums =====

// ===== Structs =====
/**
 * @brief Raw logging data type
 *
 * @note This struct may contain dynamically allocated memory. Always call
 *       mavsdk_log_streaming_log_streaming_raw_destroy() when done to avoid memory leaks.
 */
typedef struct {
    /**  Ulog file stream data encoded as base64 */
    char* data_base64;
} mavsdk_log_streaming_log_streaming_raw_t;

/**
 * @brief Destroy a log_streaming_raw struct.
 *
 * Frees all memory allocated by MAVSDK for this struct, including any
 * dynamically allocated arrays or strings. Must be called to avoid memory leaks.
 * Always call this function when done with the struct, even if it currently
 * contains no dynamic allocations.
 *
 * @param target Pointer to the struct to destroy. Can be NULL (no-op).
 */
void mavsdk_log_streaming_log_streaming_raw_destroy(
    mavsdk_log_streaming_log_streaming_raw_t* target);

/**
 * @brief Destroy an array of log_streaming_raw structs.
 *
 * Frees all memory allocated for the array and its elements, including any
 * nested dynamic allocations. Must be called to avoid memory leaks.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 * @param size Number of elements in the array.
 */
void mavsdk_log_streaming_log_streaming_raw_array_destroy(
    mavsdk_log_streaming_log_streaming_raw_t** array,
    size_t size);

/**
 * @brief Possible results returned for logging requests
 */
typedef enum {
    /**  Request succeeded. */
    MAVSDK_LOG_STREAMING_RESULT_SUCCESS = 0,
    /**  No system connected. */
    MAVSDK_LOG_STREAMING_RESULT_NO_SYSTEM = 1,
    /**  Connection error. */
    MAVSDK_LOG_STREAMING_RESULT_CONNECTION_ERROR = 2,
    /**  System busy. */
    MAVSDK_LOG_STREAMING_RESULT_BUSY = 3,
    /**  Command denied. */
    MAVSDK_LOG_STREAMING_RESULT_COMMAND_DENIED = 4,
    /**  Timeout. */
    MAVSDK_LOG_STREAMING_RESULT_TIMEOUT = 5,
    /**  Unsupported. */
    MAVSDK_LOG_STREAMING_RESULT_UNSUPPORTED = 6,
    /**  Unknown error. */
    MAVSDK_LOG_STREAMING_RESULT_UNKNOWN = 7,
} mavsdk_log_streaming_result_t;



// ===== Primitive Array Destroy Functions =====
/**
 * @brief Destroy an array of float.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_float_array_destroy(float** array);
/**
 * @brief Destroy an array of double.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_double_array_destroy(double** array);
/**
 * @brief Destroy an array of int32_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_int32t_array_destroy(int32_t** array);
/**
 * @brief Destroy an array of uint32_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_uint32t_array_destroy(uint32_t** array);
/**
 * @brief Destroy an array of int64_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_int64t_array_destroy(int64_t** array);
/**
 * @brief Destroy an array of uint64_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_uint64t_array_destroy(uint64_t** array);
/**
 * @brief Destroy an array of bool.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_bool_array_destroy(bool** array);

/**
 * @brief Destroy a string (char*).
 *
 * Frees the memory allocated for the string.
 *
 * @param str Pointer to the string pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_string_destroy(char** str);

/**
 * @brief Destroy a byte buffer (uint8_t*).
 *
 * Frees the memory allocated for the byte buffer.
 *
 * @param buffer Pointer to the buffer pointer. Will be set to NULL after freeing.
 */
void mavsdk_log_streaming_byte_buffer_destroy(uint8_t** buffer);

// ===== Callback Typedefs =====
typedef void (*mavsdk_log_streaming_start_log_streaming_callback_t)(const mavsdk_log_streaming_result_t result, void* user_data);
typedef void (*mavsdk_log_streaming_stop_log_streaming_callback_t)(const mavsdk_log_streaming_result_t result, void* user_data);
typedef void (*mavsdk_log_streaming_log_streaming_raw_callback_t)(const mavsdk_log_streaming_log_streaming_raw_t logging_raw, void* user_data);

// ===== LogStreaming Creation/Destruction =====
CMAVSDK_EXPORT mavsdk_log_streaming_t mavsdk_log_streaming_create(mavsdk_system_t system);
CMAVSDK_EXPORT void mavsdk_log_streaming_destroy(mavsdk_log_streaming_t log_streaming);

// ===== Methods =====

/**
 * @brief Start streaming logging data.
 *
 * @param log_streaming The log_streaming instance.
 * @param callback Function to call when new data is available.
 * @param user_data User data to pass to the callback.
 */
CMAVSDK_EXPORT void mavsdk_log_streaming_start_log_streaming_async(
    mavsdk_log_streaming_t log_streaming,
    mavsdk_log_streaming_start_log_streaming_callback_t callback,
    void* user_data);


/**
 * @brief Get the current start log streaming (blocking).
 *
 * This function blocks until a value is available.
 *
 * @param telemetry The telemetry instance.
 * @param start_log_streaming_out Pointer to store the result.
 */
CMAVSDK_EXPORT
mavsdk_log_streaming_result_t
mavsdk_log_streaming_start_log_streaming(
    mavsdk_log_streaming_t log_streaming);


/**
 * @brief Stop streaming logging data.
 *
 * @param log_streaming The log_streaming instance.
 * @param callback Function to call when new data is available.
 * @param user_data User data to pass to the callback.
 */
CMAVSDK_EXPORT void mavsdk_log_streaming_stop_log_streaming_async(
    mavsdk_log_streaming_t log_streaming,
    mavsdk_log_streaming_stop_log_streaming_callback_t callback,
    void* user_data);


/**
 * @brief Get the current stop log streaming (blocking).
 *
 * This function blocks until a value is available.
 *
 * @param telemetry The telemetry instance.
 * @param stop_log_streaming_out Pointer to store the result.
 */
CMAVSDK_EXPORT
mavsdk_log_streaming_result_t
mavsdk_log_streaming_stop_log_streaming(
    mavsdk_log_streaming_t log_streaming);


/**
 * @brief Subscribe to logging messages
 *
 * @param log_streaming The log_streaming instance.
 * @param callback Function to call when new data is available.
 * @param user_data User data to pass to the callback.
 * @return Handle for this subscription. Use mavsdk_log_streaming_unsubscribe_log_streaming_raw() to unsubscribe.
 */
CMAVSDK_EXPORT mavsdk_log_streaming_log_streaming_raw_handle_t mavsdk_log_streaming_subscribe_log_streaming_raw(
    mavsdk_log_streaming_t log_streaming,
    mavsdk_log_streaming_log_streaming_raw_callback_t callback,
    void* user_data);

/**
 * @brief Unsubscribe from 'log_streaming_raw' updates.
 *
 * Stops the subscription and frees resources associated with the handle.
 *
 * @param log_streaming The log_streaming instance.
 * @param handle The subscription handle returned by mavsdk_log_streaming_subscribe_log_streaming_raw().
 */
CMAVSDK_EXPORT void mavsdk_log_streaming_unsubscribe_log_streaming_raw(
    mavsdk_log_streaming_t log_streaming,
    mavsdk_log_streaming_log_streaming_raw_handle_t);


#ifdef __cplusplus
}
#endif

#endif // CMAVSDK_LOG_STREAMING_H