py/pymavsdk/plugins/log_streaming/log_streaming.py

# ruff: noqa: F401

# WARNING: THIS FILE IS AUTOGENERATED! As such, it should not be edited.
# Edits need to be made to the proto files
# (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/log_streaming/log_streaming.proto)

"""
Provide log streaming data.
"""

import ctypes

from typing import Callable, Any
from enum import IntEnum

from ...cmavsdk_loader import _cmavsdk_lib


# ===== Enums =====


# ===== Result Enums =====
class LogStreamingResult(IntEnum):
    """Possible results returned for logging requests"""

    SUCCESS = 0
    NO_SYSTEM = 1
    CONNECTION_ERROR = 2
    BUSY = 3
    COMMAND_DENIED = 4
    TIMEOUT = 5
    UNSUPPORTED = 6
    UNKNOWN = 7


# ===== Internal C Structures =====
class LogStreamingRawCStruct(ctypes.Structure):
    """
    Internal C structure for LogStreamingRaw.
    Used only for C library communication.
    """

    _fields_ = [
        ("data_base64", ctypes.c_char_p),
    ]


# ===== Structures =====
class LogStreamingRaw:
    """
    Raw logging data type
    """

    def __init__(self, data_base64=None):
        self.data_base64 = data_base64

    @classmethod
    def from_c_struct(cls, c_struct):
        """Convert from C structure to Python object"""
        instance = cls()
        instance.data_base64 = c_struct.data_base64.decode("utf-8")
        return instance

    def to_c_struct(self):
        """Convert to C structure for C library calls"""
        c_struct = LogStreamingRawCStruct()
        c_struct.data_base64 = self.data_base64.encode("utf-8")
        return c_struct

    def __str__(self):
        fields = []
        fields.append(f"data_base64={self.data_base64}")
        return f"LogStreamingRaw({', '.join(fields)})"


# ===== Plugin =====
class LogStreaming:
    """Provide log streaming data."""

    def __init__(self, system):
        self._lib = _cmavsdk_lib
        self._handle = None
        self._callbacks = []  # Keep references to prevent GC

        if system is None:
            raise ValueError("system cannot be None")

        system_handle = system._handle

        if not system_handle:
            raise ValueError("system handle is null")

        self._handle = self._lib.mavsdk_log_streaming_create(system_handle)

        if not self._handle:
            raise RuntimeError(
                "Failed to create LogStreaming plugin - C function returned null handle"
            )

    def start_log_streaming_async(self, callback: Callable, user_data: Any = None):
        """Start streaming logging data."""

        def c_callback(result, ud):
            try:
                py_result = LogStreamingResult(result)

                callback(py_result, user_data)

            except Exception as e:
                print(f"Error in start_log_streaming callback: {e}")

        cb = StartLogStreamingCallback(c_callback)
        self._callbacks.append(cb)

        self._lib.mavsdk_log_streaming_start_log_streaming_async(self._handle, cb, None)

    def start_log_streaming(self):
        """Get start_log_streaming (blocking)"""

        result_code = self._lib.mavsdk_log_streaming_start_log_streaming(
            self._handle,
        )
        result = LogStreamingResult(result_code)
        if result != LogStreamingResult.SUCCESS:
            raise Exception(f"start_log_streaming failed: {result}")

        return result

    def stop_log_streaming_async(self, callback: Callable, user_data: Any = None):
        """Stop streaming logging data."""

        def c_callback(result, ud):
            try:
                py_result = LogStreamingResult(result)

                callback(py_result, user_data)

            except Exception as e:
                print(f"Error in stop_log_streaming callback: {e}")

        cb = StopLogStreamingCallback(c_callback)
        self._callbacks.append(cb)

        self._lib.mavsdk_log_streaming_stop_log_streaming_async(self._handle, cb, None)

    def stop_log_streaming(self):
        """Get stop_log_streaming (blocking)"""

        result_code = self._lib.mavsdk_log_streaming_stop_log_streaming(
            self._handle,
        )
        result = LogStreamingResult(result_code)
        if result != LogStreamingResult.SUCCESS:
            raise Exception(f"stop_log_streaming failed: {result}")

        return result

    def subscribe_log_streaming_raw(self, callback: Callable, user_data: Any = None):
        """Subscribe to logging messages"""

        def c_callback(c_data, ud):
            try:
                py_data = LogStreamingRaw.from_c_struct(c_data)

                self._lib.mavsdk_log_streaming_log_streaming_raw_destroy(
                    ctypes.byref(c_data)
                )

                callback(py_data, user_data)

            except Exception as e:
                print(f"Error in log_streaming_raw callback: {e}")

        cb = LogStreamingRawCallback(c_callback)
        self._callbacks.append(cb)

        return self._lib.mavsdk_log_streaming_subscribe_log_streaming_raw(
            self._handle, cb, None
        )

    def unsubscribe_log_streaming_raw(self, handle: ctypes.c_void_p):
        """Unsubscribe from log_streaming_raw"""
        self._lib.mavsdk_log_streaming_unsubscribe_log_streaming_raw(
            self._handle, handle
        )

    def destroy(self):
        """Destroy the plugin instance"""
        if self._handle:
            self._lib.mavsdk_log_streaming_destroy(self._handle)
            self._handle = None

    def __del__(self):
        self.destroy()


# ===== Callback Types =====
StartLogStreamingCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_void_p)
StopLogStreamingCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_void_p)
LogStreamingRawCallback = ctypes.CFUNCTYPE(
    None, LogStreamingRawCStruct, ctypes.c_void_p
)

# ===== Setup Functions =====
_cmavsdk_lib.mavsdk_log_streaming_create.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_log_streaming_create.restype = ctypes.c_void_p

_cmavsdk_lib.mavsdk_log_streaming_destroy.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_log_streaming_destroy.restype = None

_cmavsdk_lib.mavsdk_log_streaming_log_streaming_raw_destroy.argtypes = [
    ctypes.POINTER(LogStreamingRawCStruct)
]
_cmavsdk_lib.mavsdk_log_streaming_log_streaming_raw_destroy.restype = None


_cmavsdk_lib.mavsdk_log_streaming_start_log_streaming_async.argtypes = [
    ctypes.c_void_p,
    StartLogStreamingCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_log_streaming_start_log_streaming_async.restype = None

_cmavsdk_lib.mavsdk_log_streaming_start_log_streaming.argtypes = [
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_log_streaming_start_log_streaming.restype = ctypes.c_int
_cmavsdk_lib.mavsdk_log_streaming_stop_log_streaming_async.argtypes = [
    ctypes.c_void_p,
    StopLogStreamingCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_log_streaming_stop_log_streaming_async.restype = None

_cmavsdk_lib.mavsdk_log_streaming_stop_log_streaming.argtypes = [
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_log_streaming_stop_log_streaming.restype = ctypes.c_int
_cmavsdk_lib.mavsdk_log_streaming_subscribe_log_streaming_raw.argtypes = [
    ctypes.c_void_p,
    LogStreamingRawCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_log_streaming_subscribe_log_streaming_raw.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_log_streaming_unsubscribe_log_streaming_raw.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_log_streaming_unsubscribe_log_streaming_raw.restype = None
